--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -13,27 +13,11 @@
             <a href="#top" class="top"></a>
 
             <div class="filter-line cf">
-                <p>FILTER BY:</p>
+                
                 <a href="#">
-                    <span class="triangle"></span>
-                    <span class="ref">All</span>
+                    
                 </a>
-                <a href="#">
-                    <span class="triangle"></span>
-                    <span class="ref">Pictures</span>
-                </a>
-                <a href="#">
-                    <span class="triangle"></span>
-                    <span class="ref">Videos</span>
-                </a>
-                <a href="#">
-                    <span class="triangle"></span>
-                    <span class="ref">Cupcakes</span>
-                </a>
-                <a href="#">
-                    <span class="triangle"></span>
-                    <span class="ref">Deserts</span>
-                </a>
+                
             </div>
 
             <div class="gallery cf">
@@ -43,7 +27,7 @@
                     <div class="background">
                         <a href="gallery-open.html">
                             <div class="hover"></div>
-                            <img src="/assets/our-gallery/1.jpg" alt=""/>
+                            <img src="/assets/backgrounds/header3.jpg" alt=""/>
                         </a>
                         <div class="shadow"></div>
                         <div class="pic"></div>
