--- a/app/views/menu/index.html.erb
+++ b/app/views/menu/index.html.erb
@@ -1,5 +1,5 @@
 <!-- ## Header Back -->
-    <div class="header-back" style="background-image: url('/assets/backgrounds/header_menu.jpg');">
+    <div class="header-back" style="background-image: url('/assets/backgrounds/salad.jpg');">
         <div class="triang top"></div>
         <div class="triang bot"></div>
     </div>
@@ -33,17 +33,16 @@
                                 </p>
                             </div>
                             <div class="line"></div>
-                            <div class="info">
+                            <div class="info" style="align:center;">
                                 <h3>just <%= c.price %>€</h3>
-                                <a href="menu-open.html">Description</a>
                             </div>
                             
-                            <a href="menu-open.html">
+                            
                                 <div class="hover"></div>
                                 
                                 <img src="/assets/our-menu/<%= c.img1 %>" alt=""/>
                             
-                            </a>
+                           
                         
                             <!--
                             <div style="background-image: url('/assets/our-menu/icon1.png');" class="circle"></div>
