--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -20,7 +20,9 @@
 /* ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## */
 /* Grid System 12 Columns
 /* ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## */
-
+/*
+ *= require social-share-button
+ */
 .col-1,
 .col-2,
 .col-3,
@@ -815,16 +817,17 @@ header .center-align > ul > li ul li.line {
 .header-back {
   overflow: hidden;
   width: 100%;
-  height: 306px;
+  height: 250px;
   z-index: 1;
   position: relative;
   background-position: 50% 0;
   background-attachment: fixed;
-  background-repeat: no-repeat;
+  //background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  padding-bottom: 500px;
 }
 .header-back .triang {
   position: absolute;
@@ -2632,7 +2635,7 @@ section .center-align .top {
 }
 .story-time-line .item:nth-child(2n) .img .circle-img {
   position: absolute;
-  width: 110px;
+  width: 450px;
   height: 110px;
   background-color: #fff;
   background-repeat: no-repeat;
@@ -2758,7 +2761,7 @@ section .center-align .top {
 }
 .story-time-line .item:nth-child(2n+1) .img .circle-img {
   position: absolute;
-  width: 110px;
+  width: 450px;
   height: 110px;
   background-color: #fff;
   background-repeat: no-repeat;
