--- a/app/views/story/index.html.erb
+++ b/app/views/story/index.html.erb
@@ -1,5 +1,5 @@
 <!-- ## Header Back -->
-    <div class="header-back" style="background-image: url('/assets/backgrounds/header4.jpg');">
+    <div class="header-back" style="background-image: url('/assets/backgrounds/story.jpg');">
         <div class="triang top"></div>
         <div class="triang bot"></div>
     </div>
@@ -21,17 +21,15 @@
             <div class="cub-bot"></div>
 
             <!-- ## ## ## ## ## ## ## ## ## -->
-            <div class="item cf">
+            <% @story.each do |c| %>
+               <div class="item cf">
                 <div class="text">
-                    <h2 class="caption">History of Heritage Cafeteria</h2>
+                    <h2 class="caption"><%= c.title %></h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Aliquam tincidunt suscipit tellus nec consequat.
-                        Praesent rhoncus purus sed arcu volutpat ornare.
-                        Aliquam tincidunt suscipit tellus nec
+                        <%= c.text %>
                     </p>
                     <div class="info">
-                        <h3>21 Sep 2013 / <a href="story-open.html">Take a look</a></h3>
+                        <h3>21 Sep 2013</h3>
                     </div>
                 </div>
                 <div class="circle">
@@ -40,169 +38,12 @@
                 </div>
                 <div class="img">
                     <a href="#">
-                        <div style="background-image: url('/assets/our-story/1.png');" class="circle-img"></div>
+                        <div style="background-image: url('/assets/our-story/<%= c.img %>');" class="circle-img"></div>
                     </a>
                 </div>
             </div>
-
-            <!-- ## ## ## ## ## ## ## ## ## -->
-            <div class="item cf">
-                <div class="text">
-                    <h2 class="caption">In the Beginning</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Aliquam tincidunt suscipit tellus nec consequat.
-                        Praesent rhoncus purus sed arcu volutpat ornare.
-                        Aliquam tincidunt suscipit tellus nec
-                    </p>
-                    <div class="info">
-                        <h3>21 Sep 2013 / <a href="story-open.html">Take a look</a></h3>
-                    </div>
-                </div>
-                <div class="circle">
-                    <div class="circ"></div>
-                    <div class="line"></div>
-                </div>
-                <div class="img">
-                    <a href="#">
-                        <div style="background-image: url('/assets/our-story/2.png');" class="circle-img"></div>
-                    </a>
-                </div>
-            </div>
-
-            <!-- ## ## ## ## ## ## ## ## ## -->
-            <div class="item cf">
-                <div class="text">
-                    <h2 class="caption">Lorem ipsum dolor</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Aliquam tincidunt suscipit tellus nec consequat.
-                        Praesent rhoncus purus sed arcu volutpat ornare.
-                        Aliquam tincidunt suscipit tellus nec
-                    </p>
-                    <div class="info">
-                        <h3>21 Sep 2013 / <a href="story-open.html">Take a look</a></h3>
-                    </div>
-                </div>
-                <div class="circle">
-                    <div class="circ"></div>
-                    <div class="line"></div>
-                </div>
-                <div class="img">
-                    <a href="#">
-                        <div style="background-image: url('/assets/our-story/3.png');" class="circle-img"></div>
-                    </a>
-                </div>
-            </div>
-
-            <!-- ## ## ## ## ## ## ## ## ## -->
-            <div class="item cf">
-                <div class="text">
-                    <h2 class="caption">Lorem ipsum dolor</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Aliquam tincidunt suscipit tellus nec consequat.
-                        Praesent rhoncus purus sed arcu volutpat ornare.
-                        Aliquam tincidunt suscipit tellus nec
-                    </p>
-                    <div class="info">
-                        <h3>21 Sep 2013 / <a href="story-open.html">Take a look</a></h3>
-                    </div>
-                </div>
-                <div class="circle">
-                    <div class="circ"></div>
-                    <div class="line"></div>
-                </div>
-                <div class="img">
-                    <a href="#">
-                        <div style="background-image: url('/assets/our-story/4.png');" class="circle-img"></div>
-                    </a>
-                </div>
-            </div>
-
-            <!-- ## ## ## ## ## ## ## ## ## -->
-            <div class="item cf">
-                <div class="text">
-                    <h2 class="caption">Lorem ipsum dolor</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Aliquam tincidunt suscipit tellus nec consequat.
-                        Praesent rhoncus purus sed arcu volutpat ornare.
-                        Aliquam tincidunt suscipit tellus nec
-                    </p>
-                    <div class="info">
-                        <h3>21 Sep 2013 / <a href="story-open.html">Take a look</a></h3>
-                    </div>
-                </div>
-                <div class="circle">
-                    <div class="circ"></div>
-                    <div class="line"></div>
-                </div>
-                <div class="img">
-                    <a href="#">
-                        <div style="background-image: url('/assets/our-story/5.png');" class="circle-img"></div>
-                    </a>
-                </div>
-            </div>
-
-            <!-- ## ## ## ## ## ## ## ## ## -->
-            <div class="item cf">
-                <div class="text">
-                    <h2 class="caption">Lorem ipsum dolor</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Aliquam tincidunt suscipit tellus nec consequat.
-                        Praesent rhoncus purus sed arcu volutpat ornare.
-                        Aliquam tincidunt suscipit tellus nec
-                    </p>
-                    <div class="info">
-                        <h3>21 Sep 2013 / <a href="story-open.html">Take a look</a></h3>
-                    </div>
-                </div>
-                <div class="circle">
-                    <div class="circ"></div>
-                    <div class="line"></div>
-                </div>
-                <div class="img">
-                    <a href="#">
-                        <div style="background-image: url('/assets/our-story/6.png');" class="circle-img"></div>
-                    </a>
-                </div>
-            </div>
-
-            <!-- ## ## ## ## ## ## ## ## ## -->
-            <div class="item cf">
-                <div class="text">
-                    <h2 class="caption">Lorem ipsum dolor</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Aliquam tincidunt suscipit tellus nec consequat.
-                        Praesent rhoncus purus sed arcu volutpat ornare.
-                        Aliquam tincidunt suscipit tellus nec
-                    </p>
-                    <div class="info">
-                        <h3>21 Sep 2013 / <a href="story-open.html">Take a look</a></h3>
-                    </div>
-                </div>
-                <div class="circle">
-                    <div class="circ"></div>
-                    <div class="line"></div>
-                </div>
-                <div class="img">
-                    <a href="#">
-                        <div style="background-image: url('/assets/our-story/7.png');" class="circle-img"></div>
-                    </a>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="center-align">
-            <div class="pagination cf">
-                <h3 class="left"><a href="#">Oldest Stories</a></h3>
-                <h3 class="right"><a href="#">Newest Stories</a></h3>
-            </div>
-        </div>
+            <% end %>
+            
     </article>
 
     <!-- ## Footer -->
