--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Riviera</title>
+  <meta name="google-site-verification" content="O3cXx6fuLdgiJ2CJdGasEJwkBLtdlJe0d-ulTmreuao" />
+  <title>Riviera Beach Bar</title>
   <!--
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -9,6 +10,8 @@
   <%= csrf_meta_tags %>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta description="Riviera beach Bar is a beach bar near Aggeloxwri,Thessaloniki, Greece. We are open from 1 May to 30 Sept. You can relax on the beach, party in the bar and eat greek dishes in our restaurant." />
+  <meta name="keywords" content="riviera, beach , bar, rivierabeachbar, ποτό, παραλία, φαγητό, θαλασσά, χαλάρωση " />
 
   <!-- Styles 
   <link rel="stylesheet" href="css/general.css">
