--- a/app/views/gallery/gallery.html.erb
+++ b/app/views/gallery/gallery.html.erb
@@ -1,3 +1,9 @@
+<!-- ## Header Back -->
+    <div class="header-back" style="background-image: url('/assets/our-gallery/slide1.jpg');">
+        <div class="triang top"></div>
+        <div class="triang bot"></div>
+    </div>
+
 <!-- Menu Open -->
     <article class="gallery-open">
         <h2 class="caption">Fusce vitae tempus lorem</h2>
@@ -13,15 +19,15 @@
             <div class="gallery-slider">
                 <div class="outlines"></div>
                 <ul class="slides">
-                    <li> <img src="/assets/our-gallery/slide1.jpg" alt=""/> </li>
+                    <% @album.each do |a| %>
+                      <li> <img src="/assets/our-gallery/<%= a.image %>" alt=""/> </li>
+                    <% end %>
                 </ul>
             </div>
 
             <div class="text">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt suscipit tellus nec consequat.
-                    Praesent rhoncus purus sed arcu volutpat ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidu
-                    nt suscipit tellus nec consequat. Praesent rhoncus purus sed arcu volutpat ornare.
+                    <%= @gallery.koimeno %>
                 </p>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt suscipit tellus nec consequat.
@@ -128,9 +134,10 @@
 
     <!-- Libs -->
     <script src="/assets/jquery-1.10.2.min.js"></script>
+    <script src="/assets/jquery.flexslider-min.js"></script>
     
     <!-- Custom -->
-     <script src="/assets/scripts.js"></script>
+    <script src="/assets/scripts.js"></script>
 
     <!-- Init -->
     <script type="text/javascript">
